# ChangeLog for dev-games/libtpclient-py
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Sep 2008; Aaron Mavrinac <mavrinac@gmail.com> libtpclient-py-0.3.1.ebuild:
  Stabilized release versions

*libtpclient-py-0.3.0 (25 Mar 2008)

  25 Mar 2008; Aaron Mavrinac <mavrinac@gmail.com> libtpclient-py-0.3.1.ebuild:
  version bump

*libtpclient-py-0.3.0 (24 Mar 2008)

  24 Mar 2008; Aaron Mavrinac <mavrinac@gmail.com> libtpclient-py-0.3.0.ebuild:
  Initial import