@@ -1,6 +1,6 @@
 DIST libtpclient-py-0.3.0.tar.bz2 46506 RMD160 328a01c099b42680f39a323e5e203b197fcb3a4e SHA1 f72eadb75b89c76e57a9ab2b7eb1371dbb477c2f SHA256 208997c0d45cc8c3aca85c7eb267494755a1fa66ee99724fe5b01b059f4edeed
-DIST libtpclient-py-0.3.1.tar.bz2 46762 RMD160 2e514a5f814b14ef60bfaae055fd5eeefdbc4bd9 SHA1 c65717cf29478c5f5286719a2a960a002ba7312b SHA256 4f570bf00cd7ccb89a903955bb56de7a3580ec9e9a26bb0c9d25ce9437c607c8
+DIST libtpclient-py-0.3.1.1.tar.bz2 46902 RMD160 954ddccdfd633aa63183cf6974438dd49f414e3f SHA1 5d1fddfd87b70ed0fb07dc1b7c7ab2b78980f26b SHA256 c52cc2dfeb5c396c086c201f144e41678c7fa23bae81de47e4974b9096ad0824
 EBUILD libtpclient-py-0.3.0.ebuild 593 RMD160 05d1ae74db41d48be70e80eef674b98d7d8d806a SHA1 076fb8ab6fa5e991a1593bc7301d9d94709a7ca2 SHA256 f69c9c7cec4cef99eb7cbd6904c1ea7368dae123918ad046f64a6d3f0839226a
-EBUILD libtpclient-py-0.3.1.ebuild 593 RMD160 888da2ea0a4202061e4805cfadb36e8b8fbe27f3 SHA1 0a64a4c49cebc19c99b1b4358fe71a1c1878a8f6 SHA256 906e34b7aa6a23ea81d92d1b472446888ec37bbfcc0d6877833c125b4ffe9ca4
-MISC ChangeLog 503 RMD160 85171ca957501e7114b170fd3038964ee0131fcb SHA1 a653befc5d0e2a4847e9c865eaae989df9b8ec7d SHA256 cd6185eeee867bf11a2de8cd1d88bd48bcb3ecb762a2591438f4dc0fd150e51e
+EBUILD libtpclient-py-0.3.1-r1.ebuild 597 RMD160 b3b3e5506d3aa5887cdf1e3966e0e94739c117d5 SHA1 81a8fdbd957f4dea45e5f0b497121f6ca440dd39 SHA256 bed8182bacc462cb91f65aa86d1f3d995f16b783ff0424082b451844d9062288
+MISC ChangeLog 643 RMD160 6aa546b3860c44d02ebf92a551520deccc4e0edb SHA1 18d4420c9c8abc920006f437fdd4b634fc29d7a1 SHA256 d61afaa3cbb6ddbf470b9a0446dd5bf3e19284287fd421f1b1c2c33821d65b5a
 MISC metadata.xml 371 RMD160 c93c57c6700be28144da76711ee319c13d82349a SHA1 7a85f048686abbb460d4acab40773ae782378b48 SHA256 9a56915c69ed58cbb6d6745b205855ebe7b178765e4d41790c54977ac9632c92
