@@ -1,7 +1,9 @@
 AUX tpclient-pywx-0.3.0-installed-script.patch 847 RMD160 d1dfb7db1bca63cc7ed847cf9ac84392ed80d302 SHA1 6f00dd7dea524d08855f6efee650e841c5c94c72 SHA256 3f4044061f4d09377d50e040ab5b4b7e4112df6d85a8b028d50ce22e77d0be4d
 DIST tpclient-pywx-0.3.0.tar.bz2 1612379 RMD160 de06ab7c77a733003beb2eeef5b322ee85af8934 SHA1 b81dfa066e3067dba6363429a6005276e30d10e3 SHA256 aa3ad886b9d823e55edcb4adf8fef113f83a2cc481e986e9c82638cef35f76e9
+DIST tpclient-pywx-0.3.1.1.tar.bz2 1626883 RMD160 0c73db950aac5cd172795a7ac51c3e3c5d2467b3 SHA1 71c2a650aad7179f2d7f3de7e7458323be3d56ab SHA256 f6ee88a76ce5b28b174177fff2fa3d069d4eef1ed1041f445ab597a961e4caeb
 DIST tpclient-pywx-0.3.1.tar.bz2 1627088 RMD160 7c9f2ad21221ab10f4ba7b7a9a610d630043c62a SHA1 b97142c5e68a98bccbd86da70acc85692808c6db SHA256 75b5143ba272aa34f4867c32636802b3b3529c8c7f4c1066939a1702559109ae
 EBUILD tpclient-pywx-0.3.0.ebuild 1660 RMD160 52a35c41677e736b152dee373e72cc45e5688eb5 SHA1 64327e7f7ff98d37b1b4fe8206a483ebf22f93e2 SHA256 90845f0ef448864432f2c827fb2b167979940d12a9ec0cd46c1349241bdb746c
+EBUILD tpclient-pywx-0.3.1.1.ebuild 1916 RMD160 b63d31dc7e6a4358d3beae7a4b54b5b91af71366 SHA1 f8b275524a249035801d1db576b32b94b92a3a53 SHA256 df82f153513e08b7e3c1f5727d2972087a5a22927744f79b067fc80f8ef6d75e
 EBUILD tpclient-pywx-0.3.1.ebuild 1913 RMD160 44e945f1dd515cbd63963e6d99d90985334f980d SHA1 543a39e9f715015ffd84c5f052da6e18edb91b1b SHA256 e4d713abdfa63afa185875e409db5917a6373de31e04f610276e48d4251ae2de
-MISC ChangeLog 495 RMD160 2c2c2d5626e9997e4f3c866d0f9b91eaec805c21 SHA1 4e0376d47a80c40fd4e7e662c19932833dbe0741 SHA256 853552c76c6b55328255e48dc04442b71bbeca8f3155386fd72c01157775d1af
+MISC ChangeLog 642 RMD160 bc46431907bf215e1f3e3a9de6f2596e03059a6b SHA1 5d3974fa00c05f79cd90c0443f769ce3d467980a SHA256 526c5aa465ab91439532f4a0ec5eb717d5a0a2e32b822316c75b0af01c9d43e2
 MISC metadata.xml 330 RMD160 684eee9bb5b3eedf21c6a93f1518b86831e9abe3 SHA1 5b83d402b84f4f4a87aa7087dfb54cdbcec0ff6d SHA256 91458868890b9ba7882ae250aa5a2d803f6246ee54c2e46d667e4d9c7bd24fac
