@@ -1,6 +1,11 @@
-# ChangeLog for dev-libs/libtprl
+# ChangeLog for games-strategy/tpclient-pywx
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*tpclient-pywx-0.3.1.1 (18 Oct 2008)
+
+  18 Oct 2008; Aaron Mavrinac <mavrinac@gmail.com> tpclient-pywx-0.3.1.1.ebuild:
+  version bump
 
   27 Sep 2008; Aaron Mavrinac <mavrinac@gmail.com> tpclient-pywx-0.3.1.ebuild:
   Stabilized all release versions
